# IntellRoboticsProject

./: .gitignore  README.md  RoboticsProject.gdlink  RoboticsProject.gsite
IR_catkin_ws/devel/: .catkin  .rosinstall  setup.sh
IR_catkin_ws/devel/lib/pkgconfig/: spatial6r_description.pc  spatial6r_kinematics.pc
IR_catkin_ws/devel/lib/spatial6r_kinematics/: spatial6r_kinematics_armTraj  spatial6r_kinematics_ballMover  spatial6r_kinematics_geometry_shapes
IR_catkin_ws/devel/share/spatial6r_description/cmake/: spatial6r_descriptionConfig.cmake
IR_catkin_ws/devel/share/spatial6r_kinematics/cmake/: spatial6r_kinematicsConfig.cmake
IR_catkin_ws/src/spatial6r_description/: CMakeLists.txt
IR_catkin_ws/src/spatial6r_description/config/: joints.yaml
IR_catkin_ws/src/spatial6r_description/launch/: config.rviz  init_config.yaml  rviz.launch
IR_catkin_ws/src/spatial6r_description/urdf/: spatial6r_model.urdf
IR_catkin_ws/src/spatial6r_kinematics/: CMakeLists.txt  package.xml
IR_catkin_ws/src/spatial6r_kinematics/include/: ROS_Spatial6R.hpp
IR_catkin_ws/src/spatial6r_kinematics/src/: armTraj.cpp  ballMover.cpp  geometry_shapes.cpp
IR_library/: Makefile
IR_library/gtest/: CMakeCache.txt  Makefile  cmake_install.cmake
IR_library/include/: InverseKinematics.hpp  Jacobian.hpp  MathUtils.hpp  Planar3R.hpp  RigidBodyMotion.hpp  Spatial6R.hpp  TrajectoryPlanning.hpp  TypeDefs.hpp
IR_library/main/: Makefile  gradeAll.cpp  planar3r.cpp  simple2R.cpp  spatial6r.cpp
IR_library/src/: ForwardKinematics.cpp  InverseKinematics.cpp  Jacobian.cpp  MathUtils.cpp  Planar2R.cpp  Planar2Rmod.cpp  Planar3R.cpp  RigidBodyMotion.cpp  Spatial3R.cpp  Spatial6R.cpp  TrajectoryPlanning.cpp
